# scalper

./: .env.example  .gitignore  Mad_Rabbit_Bot.mq4  Mad_Rabbit_Bot.mq5  README.md  Scalper_Bot.mq4  Scalper_Bot.mq5  pyproject.toml
configs/: eurusd.toml  gbpusd.toml  news_schedule.json  scalper_eurusd.toml  supply_demand.json  usdjpy.toml  xauusd.toml
examples/: daily_report.txt  sample_log.jsonl
src/bot/: cli.py
src/bot/adapters/: mt5_adapter.py  paper_broker.py  paper_mt5_adapter.py
src/bot/backtest/: metrics.py  runner.py  snd_backtest.py  walkforward.py
src/bot/core/: config.py  engine.py  execution.py  health.py  interfaces.py  market_observer.py  models.py  news.py  risk.py  supervisor.py  trade_book.py
src/bot/db/: sqlite_store.py
src/bot/execution/: trade_executor.py
src/bot/ml/: filter.py
src/bot/reporting/: reporter.py
src/bot/risk/: position_sizer.py  risk_limits.py
src/bot/snd/: config.py  confirmation.py  zone_detector.py  zone_models.py  zone_scoring.py
src/bot/storage/: trade_journal.py
src/bot/strategies/: range.py  supply_demand_strategy.py  trend.py
src/bot/utils/: indicators.py  logging.py  pips.py  time.py
tests/: test_pips.py  test_position_sizer.py  test_risk_limits.py  test_risk_manager.py  test_sessions.py  test_snd_confirmation.py  test_snd_zone_detector.py  test_strategies.py  test_supervisor.py
